# simple_LLM

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
